<resources>
    <string name="app_name">FitnessAppFinal</string>
    <string name="back_button">Back</string>
    <string name="xSquats">X Squats</string>
    <string name="windmills">Windmills</string>
    <string name="wide_legged_squats">Wide Legged Squats</string>
    <string name="customize_your_workout">Customize Your Workout</string>
    <string name="abdominals">Abdominals</string>
    <string name="triceps">Triceps</string>
    <string name="biceps">Biceps</string>
    <string name="gluteus_muscles">Gluteus Muscles</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="pectorals">Pectorals</string>
    <string name="calves">Calves</string>
    <string name="back">Back</string>
    <string name="wall_sits">Wall Sits</string>
    <string name="tricep_dips">Tricep Dips</string>
    <string name="burpees">Burpees</string>
    <string name="push_ups">Push Ups</string>
    <string name="supermans">Supermans</string>
    <string name="step_ups">Step Ups</string>
    <string name="squats">Squats</string>
    <string name="prison_squats">Prison Squats</string>
    <string name="one_legged_squats">One Legged Squats</string>
    <string name="jump_squats">Jump Squats</string>
    <string name="sit_ups">Sit Ups</string>
    <string name="side_planks">Side Planks</string>
    <string name="seal_jacks">Seal Jacks</string>
    <string name="scissor_jacks">Scissor Jacks</string>
    <string name="russian_twists">Russian Twists</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="lunges">Lunges</string>
    <string name="regular_push_ups">Regular Push Ups</string>
    <string name="wide_armed_push_ups">Wide Armed Push Ups</string>
    <string name="tricep_push_ups">Tricep Push Ups</string>
    <string name="diamond_push_ups">Diamond Push Ups</string>
    <string name="planks">Planks</string>
    <string name="forearm_planks">Forearm Planks</string>
    <string name="hand_planks">Hand Planks</string>
    <string name="lay_z_boy">Lay Z Boy</string>
    <string name="hyper_extensions">Hyper Extensions</string>
    <string name="flutter_kicks">Flutter Kicks</string>
    <string name="crunches">Crunches</string>
    <string name="calf_raises">Calf Raises</string>
    <string name="high_knees">High Knees</string>
    <string name="jump_knee_tucks">Jump Knee Tucks</string>
    <string name="bicycles">Bicycles</string>
    <string name="advanced_reach">Advanced Reach</string>
    <string name="title">Thirty Second of Mayhem</string>
    <string name="subtitle">Tailor your workouts to what's good for you</string>
    <string name="workouts">Workouts</string>
    <string name="times">Times</string>
    <string name="forearmPlanksDesc">An exercise where you lay on the floor using your forearms for support and attempting to keep your back straight, working out mainly the core muscles.</string>
    <string name="handPlanksDesc">A plank where you use your hands for support, working out mainly the core muscles and pecs.</string>
    <string name="sidePlanksDesc">A plank where you support yourself with one arm leaning to the side, working out mainly the deltoid muscle.</string>
    <string name="crunchesDesc">An exercise where you lay face up on the floor with your knees bent, and then bring your chest up to your knees while keeping your knees on the floor, working out mainly the abdominal muscles.</string>
    <string name="sitUpsDesc">Similar to crunches but you bring your chin up to your knees, working out mainly the abdominals muscles.</string>
    <string name="supermansDesc">An exercise where you lay face down on the floor and slowly raise your arms and legs while keeping your chest on the floor, working out mainly glutes and hamstrings.</string>
    <string name="russianTwistsDesc">An exercise where you start in sit up position and then hold your arms straight out in front of you twist your core so that your arms move to the side of your knees and repeat, working out mainly the core muscles.</string>
    <string name="bicyclesDesc">An exercise where you lay on your pack and raise your legs into the air and simulate a pedaling motion, working out mainly the quads and calves.</string>
    <string name="flutterKicksDesc">A workout where you lay face down on a raised platform and move your legs up in down in a kicking motion, working out the gluteus muscles.</string>
    <string name="tricepDipsDesc">Using a chair or something similar place your hands palms down facing the chair and slowly lower yourself using your arms and then slowly raise yourself back up, working out mainly the triceps.</string>
    <string name="burpeesDesc">A combo move where you start with a pushup and then transition into a jumping jack and then back to a push up, working out mainly the quads, pecs, hamstrings, triceps.</string>
    <string name="lungesDesc">An exercise where you take a step forward and then lower yourself bringing your knees to a 90 degree angle.  Your back leg should also be at a 90 degree angle to the floor, working out mainly the glutes and core.</string>
    <string name="jumpingJacksDesc">An exercise where you jump and spread your arms and legs out and then jump again and bring them back in, working out mainly the glutes and dorsai.</string>
    <string name="prisonSquatsDesc">A squat where you link your fingers together behind your head and do a squat, working out mainly the glutes.</string>
    <string name="xSquatsDesc">A squat where you put your hands together in front of your chest and spread your legs and squat down to your ankles, working out mainly the glutes.</string>
    <string name="oneLeggedSquatsDesc">A squat where you hold your arms parallel to the floor and 1 leg parallel to the floor and squat on the 1 leg that is still on the floor, working out mainly the glutes.</string>
    <string name="wideLeggedSquatsDesc">A squat where you spread your legs apart and squat as far down as you can go.</string>
    <string name="jumpSquatsDesc">A squat where you do the regular squat but on the way up go fast and extend your arms to the sky and jump as high as you can, working out mainly the glutes.</string>
    <string name="wallSitsDesc">Brace your back against a wall and bend your legs to a 90 degree angle and hold for as long as possible, working out mainly the quadriceps.</string>
    <string name="stepUpsDesc">Step up one leg at a time to a slightly raised platform such as 2 text books and then step down one leg at a time, working out mainly the quads and calves.</string>
    <string name="windmillsDesc">Extend your arms and swing them in a circular motion, working out mainly the shoulder muscles.</string>
    <string name="sealJacksDesc">Similar to a jumping jack but you hold your arms straight out in front of you and swing them in and out in a clapping motion, working out the shoulder muscles.</string>
    <string name="scissorJacksDesc">Similar to the jumping jack but while doing it you cross your legs in an X fashion, working out mainly the back muscles.</string>
    <string name="advancedReachDesc">Get on all fours and extend one arm parallel to the ground while extending the opposite leg parallel to the ground, working out the core, back, quads, and triceps.</string>
    <string name="hyperExtensionsDesc">Similar to the superman but bring your arms folded across your chest and raise your chest up while keeping your legs on the floor.</string>
    <string name="wideArmedPushUpsDesc">Similar to a normal pushup but the arms are spread farther apart, working out mainly the outer pecs.</string>
    <string name="regularPushUpsDesc">An exercise in which a person lies facing the floor and, keeping their back straight, raises their body by pressing down on their hand, working out mainly the pecs, triceps and deltoids.</string>
    <string name="tricepPushUpsDesc">A push up where your hands are close together near the center of your chest, working out mainly the triceps.</string>
    <string name="diamondPushUpsDesc">A push up where you put your thumbs and index fingers together in the shape of a diamond and perform a pushup, working out mainly your pecs and triceps.</string>
    <string name="calfRaisesDesc">Repeatedly go up to your tiptoes and hold for a couple seconds and then slowly lower yourself and repeat, working out mainly the calves.</string>
    <string name="highKneesDesc">Run in place bringing your knees as high and close to your chest as possible, working out the quads and calves.</string>
    <string name="jumpKneeTucksDesc">Jump and try to bring your knees as high and close to your chest as possible, working out the quads and calves.</string>
</resources>
