<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#651FFF">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:background="#76FF03"
        android:layout_margin="8dp"
        android:id="@+id/backButton"
        android:onClick="goToMain"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customize_your_workout"
        android:textSize="24sp"
        android:id="@+id/customizeYourWorkout"
        android:layout_toEndOf="@id/backButton"
        android:layout_toRightOf="@id/backButton"
        android:paddingTop="16dp"/>
    <Button
        android:id="@+id/abdominals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/abdominals"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToAbdominals"/>
    <Button
        android:id="@+id/triceps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abdominals"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/triceps"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToTriceps"/>
    <Button
        android:id="@+id/biceps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/triceps"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/biceps"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToBiceps"/>
    <Button
        android:id="@+id/gluteusMuscles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/biceps"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/gluteus_muscles"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToButts"/>
    <Button
        android:id="@+id/quadriceps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gluteusMuscles"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/quadriceps"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToQuadriceps"/>
    <Button
        android:id="@+id/shoulders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quadriceps"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/shoulders"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToShoulders"/>
    <Button
        android:id="@+id/pectorals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoulders"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/pectorals"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToPectorals"/>
    <Button
        android:id="@+id/calves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pectorals"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/calves"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToCalves"/>
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calves"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/back"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToBack"/>
</RelativeLayout>