<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#651FFF">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:background="#76FF03"
        android:layout_margin="8dp"
        android:id="@+id/backButton"
        android:onClick="goToWorkouts"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calves"
        android:textSize="24sp"
        android:id="@+id/calvesPage"
        android:layout_toEndOf="@id/backButton"
        android:layout_toRightOf="@id/backButton"
        android:paddingTop="16dp"/>
    <Button
        android:id="@+id/wallSits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/wall_sits"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToWallSits"/>
    <Button
        android:id="@+id/stepUps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wallSits"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/step_ups"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToStepUps"/>
    <Button
        android:id="@+id/jumpingJacks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stepUps"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/jumping_jacks"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick="goToJumpingJacks"/>
    <Button
        android:id="@+id/calfRaises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jumpingJacks"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/calf_raises"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick=""/>
    <Button
        android:id="@+id/highKnees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calfRaises"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/high_knees"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick=""/>
    <Button
        android:id="@+id/jumpKneeTucks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/highKnees"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/jump_knee_tucks"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick=""/>
</RelativeLayout>