<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#651FFF">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:background="#76FF03"
        android:layout_margin="8dp"
        android:id="@+id/backButton"
        android:onClick="goToAbs"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push_ups"
        android:textSize="24sp"
        android:id="@+id/pushUpsPage"
        android:layout_toEndOf="@id/backButton"
        android:layout_toRightOf="@id/backButton"
        android:paddingTop="16dp"/>
    <Button
        android:id="@+id/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/regular_push_ups"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick=""/>
    <Button
        android:id="@+id/wideArmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regular"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/wide_armed_push_ups"
        android:gravity="start"
        android:textSize="16sp"
        android:onClick=""/>
    <Button
        android:id="@+id/tricep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wideArmed"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/tricep_push_ups"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick=""/>
    <Button
        android:id="@+id/diamond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tricep"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="13dp"
        android:text="@string/diamond_push_ups"
        android:textSize="16sp"
        android:gravity="start"
        android:onClick=""/>
</RelativeLayout>