<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#651FFF"
    android:orientation="vertical"
    tools:context="tylersand.workoutapp.MainScreen">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="29sp"
        android:textColor="#FFFF00"
        android:layout_weight="0"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="24sp"
        android:layout_weight="0"
        android:gravity="center" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workouts"
        android:textSize="24sp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#76FF03"
        android:layout_margin="8dp"
        android:onClick="openWorkoutsActivity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/times"
        android:textSize="24sp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#76FF03"
        android:layout_margin="8dp"
        android:onClick="openTimesActivity"/>
</LinearLayout>
