<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#651FFF">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:background="#76FF03"
        android:layout_margin="8dp"
        android:id="@+id/backButton"
        android:onClick=""/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seal_jacks"
        android:textSize="24sp"
        android:id="@+id/sealJacksPage"
        android:layout_toEndOf="@+id/backButton"
        android:layout_toRightOf="@id/backButton"
        android:paddingTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cac099"
        android:layout_below="@+id/backButton"
        android:layout_margin="8dp"
        android:text="@string/sealJacksDesc"/>

</RelativeLayout>